examples/test_package/Double_dc_only_report_tool/steps/pl___aircr_rough_run5/#test_analysis_1_result.txt
### Code Evaluation Report: Aircraft Flap Controller in ProbLog

---

#### **1. Document Title**
**Evaluation of Aircraft Flap Controller ProbLog Code**

---

#### **2. Background and Purpose**
The provided ProbLog code models an aircraft flap controller system inspired by Filieri et al. (2013). The system simulates the movement of flaps based on actuator strength, wind effects, and a predefined goal position. The purpose of this evaluation is to:
- Verify the correctness of the code.
- Analyze test results and identify failures.
- Ensure compliance with classical and probabilistic reasoning rules.
- Highlight edge cases and potential improvements.

---

#### **3. Test Results Summary**
The test results indicate a failure with the following error:
```
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 41:14.
```

**Failed Queries:**
- The error occurs during the evaluation of the `attempted_flap_position` predicate, specifically at line 41:14. The system cannot find clauses for the `->/2` operator, which is used in the conditional logic of the predicate.

---

#### **4. Failure Localization**
- **Failed Predicate:** `attempted_flap_position/2`
- **Code Block:**
  ```prolog
  attempted_flap_position(Time,Pos) :-
   Time > 0,
   Prev is Time-1,
   flap_position(Prev, PrevPos),
   \+ goal_reached(Prev),
   use_actuator(Time, Actuator),
   actuator_strength(Actuator, Strength),
   wind_effect(Time, WindEffect),
   goal(Target),
   Delta is Target - PrevPos,
   ( Delta > 0 -> Direction = 1 ; Direction = -1 ),
   Move is Direction * Strength + WindEffect,
   Pos is PrevPos + Move.
  ```
- **Error Location:** Line 41:14 (conditional `->/2` operator).

---

#### **5. Root Cause Analysis**
- **Logical Correctness:**
  - The predicate `attempted_flap_position` is logically sound but fails due to a syntax issue with the conditional operator `->/2`. ProbLog may not support this operator directly, or it may require explicit handling.
- **Probabilistic Reasoning:**
  - The probabilistic facts (`wind/1`, `wind_effect/2`, `use_actuator/2`) are correctly defined and comply with probabilistic rules.
  - The negation (`\+ goal_reached(Prev)`) is correctly used.
- **DeepProbLog:**
  - No DeepProbLog features (e.g., `nn/3`, `tensor/...`) are used in the code.

---

#### **6. Overall Analysis**
- **Functional Requirements:**
  - **Classical Reasoning:** Partially met. The logic is correct, but the conditional operator causes a failure.
  - **Probabilistic Reasoning:** Fully met. Probabilistic facts and rules are correctly implemented.
  - **Neural Network Integration:** Not applicable (DeepProbLog not used).
- **Edge Cases:**
  - The conditional operator `->/2` is not handled properly in ProbLog.
  - The recursive termination is ensured by the `Time > 0` condition.
  - No undefined predicates or non-list inputs are present.

---

#### **7. Error Summary**
| No. | Problem | Impact | Suggestion |
|-----|---------|--------|------------|
| 1   | Conditional operator `->/2` not supported | Code fails to execute | Replace `->/2` with `if/3` or equivalent ProbLog-compatible syntax. |
| 2   | No clauses for `->/2` at runtime | Predicate evaluation halts | Ensure all operators are ProbLog-compatible. |

---

#### **8. Recommendations**
1. Replace the `->/2` operator with a ProbLog-compatible conditional construct, such as `if/3`.
2. Test the revised code to ensure all queries (`goal_reached/1`, `overrun_exception/1`) execute without errors.
3. Verify edge cases, such as extreme wind effects or actuator failures, to ensure robustness.

---

**Word Count:** 450 words.  

This report provides a clear analysis of the failure, its root cause, and actionable suggestions for improvement. Let me know if you'd like further details or assistance with the fixes!